fixed alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -8,3 +8,7 @@ h4 {
 .selectImage{
   margin-right: 120px;
 }
+
+.submitButton{
+  margin-right: 200px;
+}
